--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -4,5 +4,5 @@ $clr-third: #f5faf2;
 $clr-white: #ffffff;
 $clr-black: #212721;
 $clr-grey: #636662;
-$clr-border: #D1D9CE;
+$clr-fourth: #D1D9CE;
 $transition: all 0.3s linear;
