--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -5,4 +5,5 @@ $clr-white: #ffffff;
 $clr-black: #212721;
 $clr-grey: #636662;
 $clr-fourth: #D1D9CE;
+$clr-translucent: rgba(0,0,0,.41);
 $transition: all 0.3s linear;
